--- a/readme.adoc
+++ b/readme.adoc
@@ -1,6 +1,48 @@
 = Spigot Block Compression Plugin
 
-TODO:
+**FOR THE HOARD!**
 
-* [ ] Handle right click
-* [ ] Handle shift click
+A small plugin for SpigotMC that allows players to "compress" and "decompress"
+stacks of items or blocks for easier storage or transport of mass quantities.
+
+++++
+<p align="center">
+  <img width="250" src="https://i.imgur.com/yxlASoJ.png">
+  <img width="356" src="https://i.imgur.com/emRlFKF.png">
+</p>
+++++
+
+9 of any of the configured allowable items/blocks may be compressed into a
+single item/block.  This process may be repeated to compress a stack up to 9
+times to store a maximum of 24,794,911,296 items in a full (64) stack of fully
+compressed items.
+
+++++
+<p align="center">
+  <img width="250" src="https://i.imgur.com/aMsCsxc.png">
+  <img width="250" src="https://i.imgur.com/GEPjVxP.png">
+</p>
+++++
+
+== Usage
+
+=== Commands
+
+`/compress`::
+  Command to open the Compression Workbench user interface. +
+  Requires the `block-compression.gui` permission.
+`/zip`::
+  Alias of `/compress`.
+
+=== Permissions
+
+`block-compression.gui`::
+  Grants access to the `/compress` command.
+
+== Configuration
+
+The plugin reads what blocks are allowed to be (de)compressed from 2 files:
+https://github.com/Foxcapades/Spigot-Compression-Plugin/blob/main/src/main/resources/compressible-items.txt[`compressible-items.txt`]
+and https://github.com/Foxcapades/Spigot-Compression-Plugin/blob/main/src/main/resources/compressible-blocks.txt[`compressible-blocks.txt`].
+
+These files will be created in the plugin's config directory on first load.
