un-bump bukkit API version

--- a/docs/testing-checklist.adoc
+++ b/docs/testing-checklist.adoc
@@ -1,5 +1,11 @@
 = Manual Testing Checklist
 
+== Bukkit
+
+[%interactive]
+* [ ] Boots on 1.17
+* [ ] Boots on 1.18
+
 == Custom Inventory
 
 === Left Click
