added missing item nether_quartz_ore

--- a/src/main/resources/locales/items.properties
+++ b/src/main/resources/locales/items.properties
@@ -118,6 +118,7 @@ minecraft.music_disc_wait          = Music Disc
 minecraft.music_disc_ward          = Music Disc
 minecraft.mutton                   = Raw Mutton
 minecraft.nautilus_shell           = Nautilus Shell
+minecraft.nether_quartz_ore        = Nether Quartz
 minecraft.nether_star              = Nether Star
 minecraft.oak_boat                 = Oak Boat
 minecraft.orange_dye               = Orange Dye
