correct quartz addition

--- a/src/main/resources/locales/items.properties
+++ b/src/main/resources/locales/items.properties
@@ -118,7 +118,6 @@ minecraft.music_disc_wait          = Music Disc
 minecraft.music_disc_ward          = Music Disc
 minecraft.mutton                   = Raw Mutton
 minecraft.nautilus_shell           = Nautilus Shell
-minecraft.nether_quartz_ore        = Nether Quartz
 minecraft.nether_star              = Nether Star
 minecraft.oak_boat                 = Oak Boat
 minecraft.orange_dye               = Orange Dye
@@ -138,6 +137,7 @@ minecraft.pufferfish_bucket        = Bucket of Pufferfish
 minecraft.pumpkin_pie              = Pumpkin Pie
 minecraft.pumpkin_seeds            = Pumpkin Seeds
 minecraft.purple_dye               = Purple Dye
+minecraft.quartz                   = Nether Quartz
 minecraft.rabbit                   = Raw Rabbit
 minecraft.rabbit_foot              = Rabbit's Foot
 minecraft.rabbit_hide              = Rabbit Hide
