add music disc to compressible lists

--- a/src/main/resources/locales/items.properties
+++ b/src/main/resources/locales/items.properties
@@ -103,19 +103,20 @@ minecraft.melon_slice              = Melon Slice
 minecraft.milk_bucket              = Milk Bucket
 minecraft.minecart                 = Minecart
 minecraft.mushroom_stew            = Mushroom Stew
-minecraft.music_disc_11            = Music Disc
-minecraft.music_disc_13            = Music Disc
-minecraft.music_disc_blocks        = Music Disc
-minecraft.music_disc_cat           = Music Disc
-minecraft.music_disc_chirp         = Music Disc
-minecraft.music_disc_far           = Music Disc
-minecraft.music_disc_mall          = Music Disc
-minecraft.music_disc_mellohi       = Music Disc
-minecraft.music_disc_pigstep       = Music Disc
-minecraft.music_disc_stal          = Music Disc
-minecraft.music_disc_strad         = Music Disc
-minecraft.music_disc_wait          = Music Disc
-minecraft.music_disc_ward          = Music Disc
+minecraft.music_disc_11            = C418 - 11
+minecraft.music_disc_13            = C418 - 13
+minecraft.music_disc_blocks        = C418 - blocks
+minecraft.music_disc_cat           = C418 - cat
+minecraft.music_disc_chirp         = C418 - chirp
+minecraft.music_disc_far           = C418 - far
+minecraft.music_disc_mall          = C418 - mall
+minecraft.music_disc_mellohi       = C418 - mellohi
+minecraft.music_disc_otherside     = Lena Raine - otherside
+minecraft.music_disc_pigstep       = Lena Raine - Pigstep
+minecraft.music_disc_stal          = C418 - stal
+minecraft.music_disc_strad         = C418 - strad
+minecraft.music_disc_wait          = C418 - wait
+minecraft.music_disc_ward          = C418 - ward
 minecraft.mutton                   = Raw Mutton
 minecraft.nautilus_shell           = Nautilus Shell
 minecraft.nether_star              = Nether Star
