--- a/src/main/resources/locales/blocks.properties
+++ b/src/main/resources/locales/blocks.properties
@@ -725,3 +725,36 @@ minecraft.yellow_stained_glass_pane          = Yellow Stained Glass Pane
 minecraft.yellow_terracotta                  = Yellow Terracotta
 minecraft.yellow_wool                        = Yellow Wool
 minecraft.zombie_head                        = Zombie Head
+
+# 1.19 Blocks
+minecraft.pearlescent_froglight   = Pearlescent Froglight
+minecraft.verdant_froglight       = Verdant Froglight
+minecraft.ochre_froglight         = Ochre Froglight
+minecraft.frogspawn               = Frogspawn
+minecraft.mangrove_button         = Mangrove Button
+minecraft.mangrove_door           = Mangrove Door
+minecraft.mangrove_fence          = Mangrove Fence
+minecraft.mangrove_fence_gate     = Mangrove Fence Gate
+minecraft.mangrove_leaves         = Mangrove Leaves
+minecraft.mangrove_log            = Mangrove Log
+minecraft.mangrove_planks         = Mangrove Planks
+minecraft.mangrove_pressure_plate = Mangrove Pressure Plate
+minecraft.mangrove_propagule      = Mangrove Propagule
+minecraft.mangrove_roots          = Mangrove Roots
+minecraft.mangrove_sign           = Mangrove Sign
+minecraft.mangrove_slab           = Mangrove Slab
+minecraft.mangrove_stairs         = Mangrove Stairs
+minecraft.mangrove_trapdoor       = Mangrove Trapdoor
+minecraft.mangrove_wood           = Mangrove Wood
+minecraft.mud                     = Mud
+minecraft.mud_brick_slab          = Mud Brick Slab
+minecraft.mud_brick_stairs        = Mud Brick Stairs
+minecraft.mud_brick_wall          = Mud Brick Wall
+minecraft.mud_bricks              = Mud Bricks
+minecraft.muddy_mangrove_roots    = Muddy Mangrove Roots
+minecraft.packed_mud              = Packed Mud
+minecraft.reinforced_deepslate    = Reinforced Deepslate
+minecraft.sculk                   = Sculk
+minecraft.sculk_catalyst          = Sculk Catalyst
+minecraft.sculk_shrieker          = Sculk Shrieker
+minecraft.sculk_vein              = Sculk Vein
