--- a/src/main/resources/locales/blocks_ger_de.properties
+++ b/src/main/resources/locales/blocks_ger_de.properties
@@ -5,7 +5,7 @@
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 # suppress inspection "UnusedProperty" for whole file
-# Plural forms sounds kinda weird, mistakes can be there. Google not really helpful. 
+# Plural forms sounds kinda weird, mistakes can be there. Google not really helpful.
 
 minecraft.acacia_button                      = Akazienholzknöpfe
 minecraft.acacia_door                        = Akazienholztüren
@@ -612,7 +612,7 @@ minecraft.spruce_fence_gate                  = Fichtenholzzauntore
 minecraft.spruce_leaves                      = Fichtennadeln
 minecraft.spruce_log                         = Fichtenstämme
 minecraft.spruce_planks                      = Fichtenholzbretter
-minecraft.spruce_pressure_plate              = Fichtenholzdruckplatten 
+minecraft.spruce_pressure_plate              = Fichtenholzdruckplatten
 minecraft.spruce_sapling                     = Fichtenholzsetzlinge
 minecraft.spruce_sign                        = Fichtenholzschilde
 minecraft.spruce_slab                        = Fichtenholzstufen
@@ -631,19 +631,19 @@ minecraft.stone_slab                         = Steinstufen
 minecraft.stone_stairs                       = Steintreppen
 minecraft.stonecutter                        = Steinsägen
 minecraft.stripped_acacia_log                = Entrindete Akazienstämme
-minecraft.stripped_acacia_wood               = Entrindete Akazienhölzer 
+minecraft.stripped_acacia_wood               = Entrindete Akazienhölzer
 minecraft.stripped_birch_log                 = Entrindete Birkenstämme
 minecraft.stripped_birch_wood                = Entrindete Birkenhölzer 
 minecraft.stripped_crimson_hyphae            = Geschälte Karmesinhyphen
 minecraft.stripped_crimson_stem              = Geschälter Karmesinstiele
 minecraft.stripped_dark_oak_log              = Entrindete Schwarzeichenstämme
-minecraft.stripped_dark_oak_wood             = Entrindete Schwarzeichenhölzer 
+minecraft.stripped_dark_oak_wood             = Entrindete Schwarzeichenhölzer
 minecraft.stripped_jungle_log                = Entrindete Tropenbaumstämme
-minecraft.stripped_jungle_wood               = Entrindete Tropenhölzer 
+minecraft.stripped_jungle_wood               = Entrindete Tropenhölzer
 minecraft.stripped_oak_log                   = Entrindete Eichenstämme
-minecraft.stripped_oak_wood                  = Entrindete Eichenhölzer 
+minecraft.stripped_oak_wood                  = Entrindete Eichenhölzer
 minecraft.stripped_spruce_log                = Entrindete Fichtenholzstämme
-minecraft.stripped_spruce_wood               = Entrindete Fichtenhölzer 
+minecraft.stripped_spruce_wood               = Entrindete Fichtenhölzer
 minecraft.stripped_warped_hyphae             = Geschälte Wirrhyphen
 minecraft.stripped_warped_stem               = Geschälte Wirrstiele
 minecraft.sugar_cane                         = Zuckerrohre
@@ -670,9 +670,9 @@ minecraft.warped_fence                       = Wirrzäune
 minecraft.warped_fence_gate                  = Wirrzauntore
 minecraft.warped_fungus                      = Wirrpilze
 minecraft.warped_hyphae                      = Wirrhyphen
-minecraft.warped_nylium                      = Wirr-Nezeln 
+minecraft.warped_nylium                      = Wirr-Nezeln
 minecraft.warped_planks                      = Wirrbretter
-minecraft.warped_pressure_plate              = Wirrdruckplatten 
+minecraft.warped_pressure_plate              = Wirrdruckplatten
 minecraft.warped_roots                       = Wirrwurzeln
 minecraft.warped_sign                        = Wirrschilder
 minecraft.warped_slab                        = Wirrstufen
@@ -726,3 +726,36 @@ minecraft.yellow_stained_glass_pane          = Gelbe Glasscheiben
 minecraft.yellow_terracotta                  = Gelbe Keramiken
 minecraft.yellow_wool                        = Gelbe Wollen
 minecraft.zombie_head                        = Zombieköpfe
+
+# 1.19 Blocks
+minecraft.pearlescent_froglight   = Pearlescent Froglight
+minecraft.verdant_froglight       = Verdant Froglight
+minecraft.ochre_froglight         = Ochre Froglight
+minecraft.frogspawn               = Frogspawn
+minecraft.mangrove_button         = Mangrove Button
+minecraft.mangrove_door           = Mangrove Door
+minecraft.mangrove_fence          = Mangrove Fence
+minecraft.mangrove_fence_gate     = Mangrove Fence Gate
+minecraft.mangrove_leaves         = Mangrove Leaves
+minecraft.mangrove_log            = Mangrove Log
+minecraft.mangrove_planks         = Mangrove Planks
+minecraft.mangrove_pressure_plate = Mangrove Pressure Plate
+minecraft.mangrove_propagule      = Mangrove Propagule
+minecraft.mangrove_roots          = Mangrove Roots
+minecraft.mangrove_sign           = Mangrove Sign
+minecraft.mangrove_slab           = Mangrove Slab
+minecraft.mangrove_stairs         = Mangrove Stairs
+minecraft.mangrove_trapdoor       = Mangrove Trapdoor
+minecraft.mangrove_wood           = Mangrove Wood
+minecraft.mud                     = Mud
+minecraft.mud_brick_slab          = Mud Brick Slab
+minecraft.mud_brick_stairs        = Mud Brick Stairs
+minecraft.mud_brick_wall          = Mud Brick Wall
+minecraft.mud_bricks              = Mud Bricks
+minecraft.muddy_mangrove_roots    = Muddy Mangrove Roots
+minecraft.packed_mud              = Packed Mud
+minecraft.reinforced_deepslate    = Reinforced Deepslate
+minecraft.sculk                   = Sculk
+minecraft.sculk_catalyst          = Sculk Catalyst
+minecraft.sculk_shrieker          = Sculk Shrieker
+minecraft.sculk_vein              = Sculk Vein
