--- a/src/main/resources/locales/items.properties
+++ b/src/main/resources/locales/items.properties
@@ -171,3 +171,8 @@ minecraft.wheat_seeds              = Wheat Seeds
 minecraft.white_dye                = White Dye
 minecraft.writable_book            = Book and Quill
 minecraft.yellow_dye               = Yellow Dye
+
+# 1.19 Items
+minecraft.echo_shard       = Echo Shard
+minecraft.music_disc_5     = Samuel Åberg - 5
+minecraft.recovery_compass = Recovery Compass
