--- a/src/main/resources/locales/blocks.properties
+++ b/src/main/resources/locales/blocks.properties
@@ -758,3 +758,60 @@ minecraft.sculk                   = Sculk
 minecraft.sculk_catalyst          = Sculk Catalyst
 minecraft.sculk_shrieker          = Sculk Shrieker
 minecraft.sculk_vein              = Sculk Vein
+
+# 1.20
+minecraft.acacia_hanging_sign   = Acacia Hanging Sign
+minecraft.birch_hanging_sign    = Birch Hanging Sign
+minecraft.crimson_hanging_sign  = Crimson Hanging Sign
+minecraft.dark_oak_hanging_sign = Dark Oak Hanging Sign
+minecraft.jungle_hanging_sign   = Jungle Hanging Sign
+minecraft.mangrove_hanging_sign = Mangrove Hanging Sign
+minecraft.oak_hanging_sign      = Oak Hanging Sign
+minecraft.spruce_hanging_sign   = Spruce Hanging Sign
+minecraft.warped_hanging_sign   = Warped Hanging Sign
+minecraft.bamboo_block          = Block of Bamboo
+minecraft.bamboo_button         = Bamboo Button
+minecraft.bamboo_door           = Bamboo Door
+minecraft.bamboo_fence          = Bamboo Fence
+minecraft.bamboo_fence_gate     = Bamboo Fence Gate
+minecraft.bamboo_hanging_sign   = Bamboo Hanging Sign
+minecraft.bamboo_mosaic         = Bamboo Mosaic
+minecraft.bamboo_mosaic_slab    = Bamboo Mosaic Slab
+minecraft.bamboo_mosaic_stairs  = Bamboo Mosaic Stairs
+minecraft.bamboo_planks         = Bamboo Planks
+minecraft.bamboo_pressure_plate = Bamboo Pressure Plate
+minecraft.bamboo_sign           = Bamboo Sign
+minecraft.bamboo_slab           = Bamboo Raft
+minecraft.bamboo_stairs         = Bamboo Stairs
+minecraft.bamboo_trapdoor       = Bamboo Trapdoor
+minecraft.stripped_bamboo_block = Block of Stripped Bamboo
+
+minecraft.calibrated_sculk_sensor = Calibrated Sculk Sensor
+
+minecraft.chiseled_bookshelf = Chiseled Bookshelf
+minecraft.decorated_pot = Decorated Pot
+minecraft.pink_petals = Pink Petals
+minecraft.pitcher_plant = Pitcher Plant
+minecraft.pitcher_crop = Pitcher Crop
+minecraft.sniffer_egg = Sniffer Egg
+minecraft.suspicious_sand = Suspicious Sand
+minecraft.suspicious_gravel = Suspicious Gravel
+minecraft.torchflower = Torchflower
+minecraft.torchflower_crop = Torchflower Crop
+
+minecraft.cherry_button = Cherry Button
+minecraft.cherry_door = Cherry Door
+minecraft.cherry_fence = Cherry Fence
+minecraft.cherry_fence_gate = Cherry Gate
+minecraft.cherry_hanging_sign = Cherry Hanging Sign
+minecraft.cherry_leaves = Cherry Leaves
+minecraft.cherry_log = Cherry Log
+minecraft.cherry_pressure_plate = Cherry Pressure Plate
+minecraft.cherry_sapling = Cherry Sapling
+minecraft.cherry_sign = Cherry Sign
+minecraft.cherry_slab = Cherry Slab
+minecraft.cherry_stairs = Cherry Stairs
+minecraft.cherry_trapdoor = Cherry Trapdoor
+minecraft.cherry_wood = Cherry Wood
+minecraft.stripped_cherry_log = Stripped Cherry Log
+minecraft.stripped_cherry_wood = Stripped Cherry Wood
