--- a/src/main/resources/locales/items.properties
+++ b/src/main/resources/locales/items.properties
@@ -176,3 +176,53 @@ minecraft.yellow_dye               = Yellow Dye
 minecraft.echo_shard       = Echo Shard
 minecraft.music_disc_5     = Samuel Åberg - 5
 minecraft.recovery_compass = Recovery Compass
+
+# 1.20 Items
+minecraft.brush             = Brush
+minecraft.music_disc_relic  = Aaron Cherof - Relic
+minecraft.pitcher_pod = Pitcher Pod
+minecraft.bamboo_raft       = Bamboo Raft
+minecraft.bamboo_chest_raft = Bamboo Raft with Chest
+minecraft.cherry_boat       = Cherry Boat
+minecraft.cherry_chest_boat = Cherry Boat with Chest
+
+minecraft.angler_pottery_sherd = Angler Pottery Sherd
+minecraft.archer_pottery_sherd = Archer Pottery Sherd
+minecraft.arms_up_pottery_sherd = Arms Up Pottery Sherd
+minecraft.blade_pottery_sherd = Blade Pottery Sherd
+minecraft.brewer_pottery_sherd = Brewer Pottery Sherd
+minecraft.burn_pottery_sherd = Burn Pottery Sherd
+minecraft.danger_pottery_sherd = Danger Pottery Sherd
+minecraft.explorer_pottery_sherd = Explorer Pottery Sherd
+minecraft.friend_pottery_sherd = Friend Pottery Sherd
+minecraft.heart_pottery_sherd = Heart Pottery Sherd
+minecraft.heartbreak_pottery_sherd = Heartbreak Pottery Sherd
+minecraft.howl_pottery_sherd = Howl Pottery Sherd
+minecraft.miner_pottery_sherd = Miner Pottery Sherd
+minecraft.mourner_pottery_sherd = Mourner Pottery Sherd
+minecraft.plenty_pottery_sherd = Plenty Pottery Sherd
+minecraft.prize_pottery_sherd = Prize Pottery Sherd
+minecraft.sheaf_pottery_sherd = Sheaf Pottery Sherd
+minecraft.shelter_pottery_sherd = Shelter Pottery Sherd
+minecraft.skull_pottery_sherd = Skull Pottery Sherd
+minecraft.snort_pottery_sherd = Snort Pottery Sherd
+
+minecraft.netherite_upgrade_smithing_template = Netherite Upgrade
+minecraft.sentry_armor_trim_smithing_template = Sentry Armor Trim
+minecraft.vex_armor_trim_smithing_template = Vex Armor Trim
+minecraft.wild_armor_trim_smithing_template = Wild Armor Trim
+minecraft.coast_armor_trim_smithing_template = Coast Armor Trim
+minecraft.dune_armor_trim_smithing_template = Dune Armor Trim
+minecraft.wayfinder_armor_trim_smithing_template = Wayfinder Armor Trim
+minecraft.raiser_armor_trim_smithing_template = Raiser Armor Trim
+minecraft.shaper_armor_trim_smithing_template = Shaper Armor Trim
+minecraft.host_armor_trim_smithing_template = Host Armor Trim
+minecraft.ward_armor_trim_smithing_template = Ward Armor Trim
+minecraft.silence_armor_trim_smithing_template = Silence Armor Trim
+minecraft.tide_armor_trim_smithing_template = Tide Armor Trim
+minecraft.snout_armor_trim_smithing_template = Snout Armor Trim
+minecraft.rib_armor_trim_smithing_template = Rib Armor Trim
+minecraft.eye_armor_trim_smithing_template = Eye Armor Trim
+minecraft.spire_armor_trim_smithing_template = Spire Armor Trim
+
+minecraft.torchflower_seeds = Torchflower Seeds
